@@ -111,11 +111,18 @@
                                 <buildArg>--no-fallback</buildArg>
                                 <buildArg>--add-modules=java.desktop</buildArg>
                                 <buildArg>-Djava.awt.headless=false</buildArg>
-                                <buildArg>--initialize-at-run-time=java.awt.Toolkit,sun.awt.windows.WToolkit,sun.awt.Win32Toolkit,java.awt,javax.swing,sun.awt</buildArg>
-                                <buildArg>--initialize-at-build-time=sun.awt.resources.awt</buildArg>
+                                <buildArg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</buildArg>
+                                <buildArg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</buildArg>
+                                <buildArg>--add-exports=java.desktop/sun.awt.windows=ALL-UNNAMED</buildArg>
+                                <buildArg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</buildArg>
+
+                                <buildArg>--initialize-at-run-time=java.awt,javax.swing,sun.awt,sun.java2d,sun.awt.windows</buildArg>
+
                                 <buildArg>-H:+AddAllCharsets</buildArg>
-                                <buildArg>--report-unsupported-elements-at-runtime</buildArg>
                             </buildArgs>
+                            <metadataRepository>
+                                <enabled>true</enabled>
+                            </metadataRepository>
                         </configuration>
                     </plugin>
                 </plugins>
